--- a/src/index.html
+++ b/src/index.html
@@ -96,11 +96,23 @@
         </div>
     </div>
 
-    <div class="consult">
+    <div class="consultation">
         <div class="container">
-            <div class="consult__header">Получите бесплатную консультацию <br>по подбору пульсометра 
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                    Просто заполните форму заявки<br>
+                    и мы перезвоним вам в течении 10 минут
             </div>
-            
+
+            <form action="#" class="feed-form">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="text">
+                <input name="email" required placeholder="Ваш E-mail" type="text">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
