3 section with mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -65,10 +65,10 @@
                     <img src="icons/cup_icon.png" alt="Кубок" class="advantages__icon">
                     <div class="advantages__title">Делимся опытом</div>
                     <div class="advantages__descr">
-                        Наши сотрудники всегда готовы<br> 
-                        поделиться своим опытом,<br> 
+                        Наши сотрудники всегда готовы
+                        поделиться своим опытом,
                         так как сами бегают полумарафоны, 
-                        <br>переплыли Босфор, готовятся к<br> 
+                        переплыли Босфор, готовятся к
                         соревнованиям по триатлону!
                     </div>
                 </div>
@@ -76,9 +76,9 @@
                     <img src="icons/heart_icon.png" alt="heart rhytm icon" class="advantages__icon">
                     <div class="advantages__title">Заботимся о здоровье</div>
                     <div class="advantages__descr">
-                        Мы работаем для того,<br> 
-                        чтобы Ваши занятия спортом шли на<br>
-                        пользу Вашему здоровью и были в<br> 
+                        Мы работаем для того,
+                        чтобы Ваши занятия спортом шли на
+                        пользу Вашему здоровью и были в
                         радость Вам и Вашим близким!
                     </div>
                 </div>
@@ -86,9 +86,9 @@
                     <img src="icons/shoe_icon.png" alt="shoe icon" class="advantages__icon">
                     <div class="advantages__title">Учим бегать</div>
                     <div class="advantages__descr">
-                        Помогаем с обучением <br>
+                        Помогаем с обучением
                         правильной технике бега!<br> 
-                        Дружим с крупнейшей школой бега в<br> 
+                        Дружим с крупнейшей школой бега в
                         России - <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
             </h2>
             <div class="consultation__descr">
                     Просто заполните форму заявки<br>
-                    и мы перезвоним вам в течении 10 минут
+                    и мы перезвоним вам в течение 10 минут
             </div>
 
             <form action="#" class="feed-form">
