--- a/src/index.html
+++ b/src/index.html
@@ -137,17 +137,17 @@
                 <li class="catalog__tab"><div>для триатлона</div></li>
             </ul>
 
-            <div class="catalog__content">
+            <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/watch.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                             <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
