--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Pulse</title>
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -109,7 +109,7 @@
                     и мы перезвоним вам в течение 10 минут
             </div>
 
-            <form action="#" class="feed-form">
+            <form id="consultation-form" action="#" class="feed-form">
                 <input name="name" required placeholder="Ваше имя" type="text">
                 <input name="phone" required placeholder="Ваш телефон" type="text">
                 <input name="email" required placeholder="Ваш E-mail" type="text">
@@ -471,9 +471,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25 feed-form_modal">
-                <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="text">
-                <input name="email" required placeholder="Ваш E-mail" type="text">
+                <input name="name" placeholder="Ваше имя" type="text">
+                <input name="phone" placeholder="Ваш телефон" type="text">
+                <input name="email" placeholder="Ваш E-mail" type="text">
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
@@ -497,10 +497,16 @@
         </div>
     </div>
 
+    <a href="#up" class="page-up">
+        <img src="icons/up-button.svg" alt="up">
+    </a>
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
    <script src="js/slick.min.js"></script>
+   <script src="js/jquery.validate.min.js"></script>
+   <script src="js/jquery.maskedinput.min.js"></script>
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> -->
     <script src="js/script.js"></script>
 </body>
